Better naming conventions.

--- a/_layouts/footer.html
+++ b/_layouts/footer.html
@@ -1,9 +1,9 @@
     <footer class="footer" role="contentinfo">
         <div class="wrapper wrapper__match-content">
 
-            <div class="footer_pre">
+            <div class="footer-pre">
 
-                <ul class="list list__horizontal">
+                <ul class="list list__horizontal footer_icon-list">
                     <li class="list_item">
                         <a class="share-icon"
                            href="https://facebook.com/cfpb">
@@ -19,7 +19,7 @@
                         </a>
                     </li>
                 </ul>
-                <ul class="list list__links">
+                <ul class="list list__links footer_nav-list">
                     <li>
                         <a class="list_link" href="/contact-us/">
                             Contact us
@@ -42,11 +42,94 @@
                     </li>
                 </ul>
 
-            </div><!-- END .footer_pre -->
+            </div><!-- END .footer-pre -->
 
-            <div class="footer_left">
+            <div class="footer-right">
 
-                <a href="/">
+                <div class="footer-right_item">
+                    <h2 class="h6">
+                        Researchers
+                    </h2>
+                    <ul class="list__unstyled">
+                        <li class="list_item">
+                            <a href="" class="list_link">
+                                Datasets
+                            </a>
+                        </li>
+                        <li class="list_item">
+                            <a href="" class="list_link">
+                                Reports
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-right_item">
+                    <h2 class="h6">
+                        Developers
+                    </h2>
+                    <ul class="list__unstyled">
+                        <li class="list_item">
+                            <a href="" class="list_link">
+                                API's
+                            </a>
+                        </li>
+                        <li class="list_item">
+                            <a href="" class="list_link">
+                                Open source projects
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-right_item">
+                    <h2 class="h6">
+                        Educators
+                    </h2>
+                    <ul class="list__unstyled">
+                        <li class="list_item">
+                            <a href="" class="list_link">
+                                Toolkits
+                            </a>
+                        </li>
+                        <li class="list_item">
+                            <a href="" class="list_link">
+                                Online learning
+                            </a>
+                        </li>
+                        <li class="list_item">
+                            <a href="" class="list_link">
+                                Brochures
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-right_item">
+                    <h2 class="h6">
+                        Regulated entities
+                    </h2>
+                    <ul class="list__unstyled">
+                        <li class="list_item">
+                            <a href="" class="list_link">
+                                Regulations
+                            </a>
+                        </li>
+                        <li class="list_item">
+                            <a href="" class="list_link">
+                                Notice and comment
+                            </a>
+                        </li>
+                        <li class="list_item">
+                            <a href="" class="list_link">
+                                Compliance guides
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
+            </div><!-- END .footer-right -->
+
+            <div class="footer-left">
+
+                <a href="/" class="footer_logo">
                     <img class="header_logo u-js-only"
                          src="/static/img/logo.svg"
                          onerror="this.onerror=null;this.src='/static/img/logo.png';"
@@ -61,104 +144,32 @@
                              height="66">
                     </noscript>
                 </a>
-                <p class="short-desc">
+                <p class="short-desc footer_address">
                     Consumer Financial Protection Bureau<br>
                     1700 G Street, NW<br>
                     Washington, D.C. 20552
                 </p>
-                <b>For general inquiries only</b>
-                <ul class="list list__links">
-                    <li>
-                        <a class="list_link" href="tel:202-435-7000">
-                            (202) 435-7000
-                        </a>
-                    </li>
-                    <li>
-                        <a class="list_link" href="mailto:Info@consumerfinance.gov">
-                            Info@consumerfinance.gov
-                        </a>
-                    </li>
-                </ul>
+                <div class="footer_general-inqueries">
+                    <b>For general inquiries only</b>
+                    <ul class="list list__links">
+                        <li>
+                            <a class="list_link" href="tel:202-435-7000">
+                                (202) 435-7000
+                            </a>
+                        </li>
+                        <li>
+                            <a class="list_link" href="mailto:Info@consumerfinance.gov">
+                                Info@consumerfinance.gov
+                            </a>
+                        </li>
+                    </ul>
+                </div>
 
-            </div><!-- END .footer_left -->
+            </div><!-- END .footer-left -->
 
-            <div class="footer_right u-hide-on-mobile">
-                <h2 class="list_item h6">
-                    Researchers
-                </h2>
-                <ul class="list__unstyled">
-                    <li class="list_item">
-                        <a href="" class="list_link">
-                            Datasets
-                        </a>
-                    </li>
-                    <li class="list_item">
-                        <a href="" class="list_link">
-                            Reports
-                        </a>
-                    </li>
-                </ul>
-                <h2 class="list_item h6">
-                    Developers
-                </h2>
-                <ul class="list__unstyled">
-                    <li class="list_item">
-                        <a href="" class="list_link">
-                            API's
-                        </a>
-                    </li>
-                    <li class="list_item">
-                        <a href="" class="list_link">
-                            Open source projects
-                        </a>
-                    </li>
-                </ul>
-                <h2 class="list_item h6">
-                    Educators
-                </h2>
-                <ul class="list__unstyled">
-                    <li class="list_item">
-                        <a href="" class="list_link">
-                            Toolkits
-                        </a>
-                    </li>
-                    <li class="list_item">
-                        <a href="" class="list_link">
-                            Online learning
-                        </a>
-                    </li>
-                    <li class="list_item">
-                        <a href="" class="list_link">
-                            Brochures
-                        </a>
-                    </li>
-                </ul>
-                <h2 class="list_item h6">
-                    Regulated entities
-                </h2>
-                <ul class="list__unstyled">
-                    <li class="list_item">
-                        <a href="" class="list_link">
-                            Regulations
-                        </a>
-                    </li>
-                    <li class="list_item">
-                        <a href="" class="list_link">
-                            Notice and comment
-                        </a>
-                    </li>
-                    <li class="list_item">
-                        <a href="" class="list_link">
-                            Compliance guides
-                        </a>
-                    </li>
-                </ul>
+            <div class="footer-post">
 
-            </div><!-- END .footer_right -->
-
-            <div class="footer_post">
-
-                <ul class="list list__unstyled list__spaced">
+                <ul class="list list__unstyled list__spaced footer_list">
                     <li class="list_item">
                         <a class="list_link" href="http://www.consumerfinance.gov/privacy-policy/">
                             Privacy policy & legal notices
@@ -201,7 +212,7 @@
                     </li>
                 </ul>
 
-            </div><!-- END .footer_post -->
+            </div><!-- END .footer-post -->
             
         </div><!-- END .wrapper.wrapper__match-content -->
     </footer><!-- END .footer -->
