--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8907,6 +8907,87 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
   border-top: 3px solid #2cb34a;
   background: #f1f2f2;
 }
+@media only all and (min-width: 64em) {
+  .footer-left {
+    display: inline-block;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border: solid transparent;
+    border-width: 0 15px;
+    margin-right: -0.25em;
+    vertical-align: top;
+    width: 33.33333333%;
+    position: relative;
+    right: 66.66666667%;
+    border-left: 0;
+  }
+  .ie .footer-left {
+    margin-right: -0.26em;
+  }
+  .lt-ie8 .footer-left {
+    display: inline;
+    margin-right: 0;
+    zoom: 1;
+    behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  }
+}
+.footer-right {
+  display: block;
+  position: relative;
+  margin-left: -15px;
+  margin-right: -15px;
+}
+@media only all and (max-width: 37.4375em) {
+  .footer-right {
+    display: none;
+  }
+}
+@media only all and (min-width: 64em) {
+  .footer-right {
+    display: inline-block;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border: solid transparent;
+    border-width: 0 15px;
+    margin-right: -0.25em;
+    vertical-align: top;
+    width: 66.66666667%;
+    position: relative;
+    left: 33.33333333%;
+    border-right: 0;
+  }
+  .ie .footer-right {
+    margin-right: -0.26em;
+  }
+  .lt-ie8 .footer-right {
+    display: inline;
+    margin-right: 0;
+    zoom: 1;
+    behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  }
+}
+.footer-right_item {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 25%;
+}
+.ie .footer-right_item {
+  margin-right: -0.26em;
+}
+.lt-ie8 .footer-right_item {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
 /* topdoc
     name: EOF
     eof: true
