--- a/_layouts/footer.html
+++ b/_layouts/footer.html
@@ -45,86 +45,87 @@
             </div><!-- END .footer-pre -->
 
             <div class="footer-right">
+                <div class="footer-l">
+                    <div class="footer-l_col">
+                        <h2 class="h6">
+                            Researchers
+                        </h2>
+                        <ul class="list__unstyled">
+                            <li class="list_item">
+                                <a href="" class="list_link">
+                                    Datasets
+                                </a>
+                            </li>
+                            <li class="list_item">
+                                <a href="" class="list_link">
+                                    Reports
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer-l_col">
+                        <h2 class="h6">
+                            Developers
+                        </h2>
+                        <ul class="list__unstyled">
+                            <li class="list_item">
+                                <a href="" class="list_link">
+                                    API's
+                                </a>
+                            </li>
+                            <li class="list_item">
+                                <a href="" class="list_link">
+                                    Open source projects
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer-l_col">
+                        <h2 class="h6">
+                            Educators
+                        </h2>
+                        <ul class="list__unstyled">
+                            <li class="list_item">
+                                <a href="" class="list_link">
+                                    Toolkits
+                                </a>
+                            </li>
+                            <li class="list_item">
+                                <a href="" class="list_link">
+                                    Online learning
+                                </a>
+                            </li>
+                            <li class="list_item">
+                                <a href="" class="list_link">
+                                    Brochures
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer-l_col">
+                        <h2 class="h6">
+                            Regulated entities
+                        </h2>
+                        <ul class="list__unstyled">
+                            <li class="list_item">
+                                <a href="" class="list_link">
+                                    Regulations
+                                </a>
+                            </li>
+                            <li class="list_item">
+                                <a href="" class="list_link">
+                                    Notice and comment
+                                </a>
+                            </li>
+                            <li class="list_item">
+                                <a href="" class="list_link">
+                                    Compliance guides
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
 
-                <div class="footer-right_item">
-                    <h2 class="h6">
-                        Researchers
-                    </h2>
-                    <ul class="list__unstyled">
-                        <li class="list_item">
-                            <a href="" class="list_link">
-                                Datasets
-                            </a>
-                        </li>
-                        <li class="list_item">
-                            <a href="" class="list_link">
-                                Reports
-                            </a>
-                        </li>
-                    </ul>
                 </div>
-                <div class="footer-right_item">
-                    <h2 class="h6">
-                        Developers
-                    </h2>
-                    <ul class="list__unstyled">
-                        <li class="list_item">
-                            <a href="" class="list_link">
-                                API's
-                            </a>
-                        </li>
-                        <li class="list_item">
-                            <a href="" class="list_link">
-                                Open source projects
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="footer-right_item">
-                    <h2 class="h6">
-                        Educators
-                    </h2>
-                    <ul class="list__unstyled">
-                        <li class="list_item">
-                            <a href="" class="list_link">
-                                Toolkits
-                            </a>
-                        </li>
-                        <li class="list_item">
-                            <a href="" class="list_link">
-                                Online learning
-                            </a>
-                        </li>
-                        <li class="list_item">
-                            <a href="" class="list_link">
-                                Brochures
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="footer-right_item">
-                    <h2 class="h6">
-                        Regulated entities
-                    </h2>
-                    <ul class="list__unstyled">
-                        <li class="list_item">
-                            <a href="" class="list_link">
-                                Regulations
-                            </a>
-                        </li>
-                        <li class="list_item">
-                            <a href="" class="list_link">
-                                Notice and comment
-                            </a>
-                        </li>
-                        <li class="list_item">
-                            <a href="" class="list_link">
-                                Compliance guides
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-
             </div><!-- END .footer-right -->
 
             <div class="footer-left">
