--- a/docs/layout/index.html
+++ b/docs/layout/index.html
@@ -3369,6 +3369,12 @@ Main content...
   border-top: 3px solid #2cb34a;
   background: #f1f2f2;
 }
+.footer-l {
+  display: block;
+  position: relative;
+  margin-left: -15px;
+  margin-right: -15px;
+}
 @media only all and (min-width: 64em) {
   .footer-left {
     display: inline-block;
@@ -3393,12 +3399,6 @@ Main content...
     zoom: 1;
     behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
-}
-.footer-right {
-  display: block;
-  position: relative;
-  margin-left: -15px;
-  margin-right: -15px;
 }
 @media only all and (max-width: 37.4375em) {
   .footer-right {
@@ -3430,7 +3430,7 @@ Main content...
     behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
 }
-.footer-right_item {
+.footer-right .footer-l_col {
   display: inline-block;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -3441,10 +3441,10 @@ Main content...
   vertical-align: top;
   width: 25%;
 }
-.ie .footer-right_item {
+.ie .footer-right .footer-l_col {
   margin-right: -0.26em;
 }
-.lt-ie8 .footer-right_item {
+.lt-ie8 .footer-right .footer-l_col {
   display: inline;
   margin-right: 0;
   zoom: 1;
