--- a/docs/layout/main.ie.html
+++ b/docs/layout/main.ie.html
@@ -3213,14 +3213,14 @@ Main content...
   background: #f1f2f2;
 }
 
-.footer-right {
+.footer-l {
   display: block;
   position: relative;
   margin-left: -15px;
   margin-right: -15px;
 }
 
-.footer-right_item {
+.footer-right .footer-l_col {
   display: inline-block;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -3232,11 +3232,11 @@ Main content...
   width: 25%;
 }
 
-.ie .footer-right_item {
+.ie .footer-right .footer-l_col {
   margin-right: -0.26em;
 }
 
-.lt-ie8 .footer-right_item {
+.lt-ie8 .footer-right .footer-l_col {
   display: inline;
   margin-right: 0;
   zoom: 1;
