--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -9636,14 +9636,14 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
   background: #f1f2f2;
 }
 
-.footer-right {
+.footer-l {
   display: block;
   position: relative;
   margin-left: -15px;
   margin-right: -15px;
 }
 
-.footer-right_item {
+.footer-right .footer-l_col {
   display: inline-block;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -9655,11 +9655,11 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
   width: 25%;
 }
 
-.ie .footer-right_item {
+.ie .footer-right .footer-l_col {
   margin-right: -0.26em;
 }
 
-.lt-ie8 .footer-right_item {
+.lt-ie8 .footer-right .footer-l_col {
   display: inline;
   margin-right: 0;
   zoom: 1;
