Pre footer layouts.

--- a/_layouts/footer.html
+++ b/_layouts/footer.html
@@ -20,22 +20,22 @@
                     </li>
                 </ul>
                 <ul class="list list__links footer_nav-list">
-                    <li>
+                    <li class="list_item">
                         <a class="list_link" href="/contact-us/">
                             Contact us
                         </a>
                     </li>
-                    <li>
+                    <li class="list_item">
                         <a class="list_link" href="/newsroom/">
                             Newsroom
                         </a>
                     </li>
-                    <li>
+                    <li class="list_item">
                         <a class="list_link" href="http://www.consumerfinance.gov/jobs/">
                             Careers
                         </a>
                     </li>
-                    <li>
+                    <li class="list_item">
                         <a class="list_link" href="http://www.consumerfinance.gov/es/">
                             Español
                         </a>
