LEft footer layout.

--- a/docs/layout/main.ie.html
+++ b/docs/layout/main.ie.html
@@ -3225,8 +3225,16 @@ Main content...
 }
 
 .footer-pre .footer_icon-list {
+  margin-bottom: 0;
+}
+
+.footer-pre .footer_icon-list {
   position: absolute;
   right: 0;
+}
+
+.footer-pre .footer_nav-list {
+  margin-bottom: 0;
 }
 
 .footer-pre .footer_nav-list {
@@ -3244,6 +3252,77 @@ Main content...
 .footer-pre .footer_nav-list .list_item {
   margin-right: 0.25em;
   margin-left: 0;
+}
+
+.footer-left .footer_logo {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 50%;
+  border-left: 0;
+}
+
+.ie .footer-left .footer_logo {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .footer-left .footer_logo {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.footer-left .footer_address {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 25%;
+}
+
+.ie .footer-left .footer_address {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .footer-left .footer_address {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.footer-left .footer_general-inqueries {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 25%;
+  border-right: 0;
+}
+
+.ie .footer-left .footer_general-inqueries {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .footer-left .footer_general-inqueries {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .footer-right .footer-l_col {
