Post footer link layouts.

--- a/static/css/layout.less
+++ b/static/css/layout.less
@@ -1836,6 +1836,14 @@
         }
     }
 
+    &-post {
+        & .footer_list {
+            .respond-to-min(480px, {
+                .list__horizontal();
+            });
+        }
+    }
+
 }
 
 
