--- a/docs/layout/index.html
+++ b/docs/layout/index.html
@@ -3593,6 +3593,21 @@ Main content...
   margin-right: 0;
   zoom: 1;
   behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+@media only all and (min-width: 30em) {
+  .footer-post .footer_list {
+    padding-left: 0;
+  }
+  .footer-post .footer_list .list_item {
+    display: inline-block;
+  }
+  .lt-ie8 .footer-post .footer_list .list_item {
+    display: inline;
+  }
+  .footer-post .footer_list .list_item {
+    margin-right: 0.25em;
+    margin-left: 0;
+  }
 }</code></pre>
       </div>
     </div>
