--- a/docs/layout/main.ie.html
+++ b/docs/layout/main.ie.html
@@ -3347,6 +3347,23 @@ Main content...
   zoom: 1;
   behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
+
+.footer-post .footer_list {
+  padding-left: 0;
+}
+
+.footer-post .footer_list .list_item {
+  display: inline-block;
+}
+
+.lt-ie8 .footer-post .footer_list .list_item {
+  display: inline;
+}
+
+.footer-post .footer_list .list_item {
+  margin-right: 0.25em;
+  margin-left: 0;
+}
 </code></pre>
       </div>
     </div>
